objects/CustomLink__c.object
<CustomObject>
    <description>SFDC1-5622 to Store the Custom Links, easily find things like clicktools, forms or user request forms.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-5622 To check the URL is active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomLinkName__c</fullName>
        <description>SFDC1-5622 Custom Link Name</description>
        <inlineHelpText>Please Enter Name of the Custom Link</inlineHelpText>
        <label>Custom Link Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <description>SFDC-2564: Created a new field that determines the type of Custom Link.</description>
        <inlineHelpText>Type of Custom Link.</inlineHelpText>
        <label>Domain</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalLink__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-2564 To identify if the URL is an internal link.</description>
        <label>Internal Link?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelatedField__c</fullName>
        <description>SFDC-2564 Created to add API name(s) of the field(s) that has to be used in the URL field.</description>
        <inlineHelpText>To add API name of the field. This will replace &apos;{FieldValue0}&apos; string in the URL.
In case of multiple fields to be used in the URL, add comma separated API names, in the same sequence as {FieldValue(i)} in the URL field.</inlineHelpText>
        <label>Related Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <description>SFDC-2564: This field determines the order in which the Custom Links would appear</description>
        <inlineHelpText>Add order number of the custom link.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>SFDC1-5622 - Custom Link&apos;s URL</description>
        <inlineHelpText>Please enter the URL. 
To add a field value as a parameter, use &apos;{FieldValue0}&apos;. In case of multiple parameters, use &apos;{FieldValue0}&apos;, &apos;{FieldValue1}&apos;, &apos;{FieldValue2}&apos; and so on. Eg: www.example.com?p0={FieldValue0}&amp;p1={FieldValue1}&amp;p2={FieldValue2}.</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Custom Link</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CustomLinkName__c</columns>
        <columns>URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>Custom Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>